deploy: julianbrooks/comp2850-hci-mdbook@27e60b6b614c94e1501ae1a2a6182ff69466da92

--- a/css/custom.css
+++ b/css/custom.css
@@ -103,3 +103,12 @@ hr + ul li::before {
     margin-right: 0.5em;
     font-weight: bold;
 }
+
+/* Hide theme picker button */
+#theme-toggle {
+    display: none !important;
+}
+
+.theme-popup {
+    display: none !important;
+}
